// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserEntry /> renders correctly with admin icon when [isAdmin=true] 1`] = `
<LinkContainer
  activeClassName="active"
  exact={false}
  replace={false}
  strict={false}
  style={
    Object {
      "paddingLeft": "10px",
    }
  }
  to="/administration/users/testid"
>
  <ListGroupItem
    bsClass="list-group-item"
    className="spaced"
    listItem={false}
  >
    <Flex
      alignContent="stretch"
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      wrap="nowrap"
    >
      <Identicon
        hash="randomhashof15c"
        size={32}
      />
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={0}
        pad={10}
        shrink={1}
      >
        testid
      </FlexItem>
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={0}
        pad={10}
        shrink={1}
      >
        <Icon
          bsStyle="primary"
          faStyle="fas"
          fixedWidth={false}
          name="user-shield"
          pullRight={false}
        />
      </FlexItem>
    </Flex>
  </ListGroupItem>
</LinkContainer>
`;

exports[`<UserEntry /> renders correctly without icon otherwise 1`] = `
<LinkContainer
  activeClassName="active"
  exact={false}
  replace={false}
  strict={false}
  style={
    Object {
      "paddingLeft": "10px",
    }
  }
  to="/administration/users/testid"
>
  <ListGroupItem
    bsClass="list-group-item"
    className="spaced"
    listItem={false}
  >
    <Flex
      alignContent="stretch"
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      wrap="nowrap"
    >
      <Identicon
        hash="randomhashof15c"
        size={32}
      />
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={0}
        pad={10}
        shrink={1}
      >
        testid
      </FlexItem>
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={0}
        pad={10}
        shrink={1}
      />
    </Flex>
  </ListGroupItem>
</LinkContainer>
`;
